<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:orientation="vertical"
    tools:context="com.fox.academy_lesson1.MainActivity">

    <TextView
        android:id="@+id/description_hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/enter_your_text_here"
        android:textSize="@dimen/text_standart_size" />

    <EditText
        android:id="@+id/my_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_big_size" />

    <Button
        android:id="@+id/open_sec_activity_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/preview_btn"
        android:textSize="@dimen/btn_text" />

    <Button
        android:id="@+id/open_my_profile_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_elements_standart"
        android:background="@color/colorAccent"
        android:text="@string/my_card_btn"
        android:textSize="@dimen/btn_text" />

    <Button
        android:id="@+id/watch_news_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_elements_standart"
        android:background="@color/colorAccent"
        android:text="@string/news_btn"
        android:textSize="@dimen/btn_text" />

    <Button
        android:id="@+id/thread_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_elements_standart"
        android:background="@color/colorAccent"
        android:text="@string/thread_text_btn"
        android:textSize="@dimen/btn_text" />

</LinearLayout>
