<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1">


    <ImageView
        android:id="@+id/img_skill1"
        android:layout_width="@dimen/img_info_label"
        android:layout_height="@dimen/img_info_label"
        android:layout_alignParentStart="true"
        android:background="@drawable/puzzle"
        android:layout_marginBottom="@dimen/margin_small_elements"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/text_skill1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/img_skill1"
        android:text="@string/company_info"
        android:layout_marginBottom="@dimen/margin_small_elements"
        android:textSize="@dimen/text_standart_size"/>

    <ImageView
        android:id="@+id/img_skill2"
        android:layout_width="@dimen/img_info_label"
        android:layout_height="@dimen/img_info_label"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/margin_small_elements"
        android:layout_marginEnd="@dimen/margin_small_elements"
        android:layout_below="@+id/text_skill1"
        android:background="@drawable/androidtry"/>

    <TextView
        android:id="@+id/text_skill2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_skill1"
        android:layout_toEndOf="@+id/img_skill1"
        android:text="@string/my_goal_text"
        android:textSize="@dimen/text_standart_size"
        android:layout_marginBottom="@dimen/margin_small_elements"/>

    <ImageView
        android:id="@+id/img_skill3"
        android:layout_width="@dimen/img_info_label"
        android:layout_height="@dimen/img_info_label"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="@dimen/margin_bottom_middle"
        android:layout_below="@id/img_skill2"
        android:layout_marginBottom="@dimen/margin_small_elements"
        android:background="@drawable/dumbbellmy"/>

    <TextView
        android:id="@+id/text_skill3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_skill2"
        android:layout_toEndOf="@+id/img_skill3"
        android:text="@string/love_sport_text"
        android:textSize="@dimen/text_standart_size"
        android:layout_marginBottom="@dimen/margin_small_elements"/>


</RelativeLayout>
