<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="2dp"
    android:orientation="vertical"
    tools:context="com.fox.academy_lesson1.MyCardActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_big_size"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/my_photo_i" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_left"
                android:layout_marginEnd="@dimen/margin_right_bottom"
                android:layout_weight="1"
                android:orientation="vertical">

                <include
                    layout="@layout/layout_info_about_me"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorAccent" />

                <TextView
                    android:id="@+id/text_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/big_info_about_me"
                    android:textSize="@dimen/text_medium_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorAccent" />

                <EditText
                    android:id="@+id/input_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_yore_message"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="@dimen/text_size_small" />

                <Button
                    android:id="@+id/btn_send_email"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/btn_normal_size"
                    android:layout_gravity="end"
                    android:background="@color/colorWhite"
                    android:text="@string/send_message_text_btn"
                    android:textColor="@color/colorAccent"
                    android:layout_marginBottom="@dimen/margin_bottom_middle"
                    android:textSize="@dimen/btn_small_text" />

                <include
                    layout="@layout/layout_image_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small_elements"
                    android:layout_gravity="center|bottom" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
